// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InviteResearcher /> Should display invalid email error 1`] = `
.c18 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 45px;
  margin-bottom: 5px;
  width: 260px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  width: 100%;
  margin-bottom: 35px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 46px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 12px;
  padding-bottom: 12px;
  height: 46px;
  border-bottom: 1px solid #D7DEE9;
}

.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 10px;
  font-size: 14px;
  color: #2F3850;
}

.c16 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  color: #2F3850;
}

.c14 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-top: 5px;
  font-weight: 700;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(14,14,14,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
}

.c8 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c6 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  position: relative;
  left: 40px;
  top: -8px;
}

.c10 {
  margin: 0;
  font-family: DM Sans;
  font-size: 15px;
  line-height: 150%;
  margin-bottom: 20px;
  color: #2F3850;
}

.c17 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  font-weight: 700;
  color: rgba(210,55,29,1);
}

.c13 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  max-width: none;
  color: #2F3850;
  background-color: rgba(233,241,251,1);
}

.c13:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c13:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      aria-describedby="modal-description"
      aria-labelledby="modal-title"
      class="c1 c2"
      overflow="auto"
      role="dialog"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5"
            id="modal-title"
          >
            Invite researcher
          </h1>
          <button
            class="c6"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
            title="Close window"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
            <p
              class="c7 c8"
            >
              Close window
            </p>
          </button>
        </div>
      </div>
      <div
        class="c9"
        id="modal-description"
      >
        <div
          class="c3"
        >
          <h3
            class="c10"
          >
            Send another invite
          </h3>
          <div
            class="c11"
            width="100%"
          >
            <p
              class="c12"
              font-size="14"
              id="researcher-email-label"
            >
              Researcher’s e-mail address
            </p>
            <input
              aria-labelledby="researcher-email-label"
              class="c13"
              placeholder="e.g john.doe@contact.com"
              type="text"
              value="invalidemail"
              width="100%"
            />
            <p
              class="c14"
              color="#D2371D"
              font-weight="bold"
            >
              Invalid e-mail address
            </p>
          </div>
          <h3
            class="c10"
          >
            Invitations sent (2)
          </h3>
          <div
            class="c15"
            height="46"
          >
            <p
              class="c16"
              font-size="14"
            >
              email@gmail.com
            </p>
            <button
              class="c17"
              color="#D2371D"
              font-weight="bold"
            >
              Cancel
            </button>
          </div>
          <div
            class="c15"
            height="46"
          >
            <p
              class="c16"
              font-size="14"
            >
              email2@gmail.com
            </p>
            <button
              class="c17"
              color="#D2371D"
              font-weight="bold"
            >
              Cancel
            </button>
          </div>
          <button
            class="c18"
            color="primary"
            disabled=""
            radius="100px"
            width="260"
          >
            Send invitation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InviteResearcher /> Should display server error 1`] = `
.c17 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 45px;
  margin-bottom: 5px;
  width: 260px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  width: 100%;
  margin-bottom: 35px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 46px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 12px;
  padding-bottom: 12px;
  height: 46px;
  border-bottom: 1px solid #D7DEE9;
}

.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 10px;
  font-size: 14px;
  color: #2F3850;
}

.c15 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  color: #2F3850;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(14,14,14,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
}

.c8 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c6 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  position: relative;
  left: 40px;
  top: -8px;
}

.c10 {
  margin: 0;
  font-family: DM Sans;
  font-size: 15px;
  line-height: 150%;
  margin-bottom: 20px;
  color: #2F3850;
}

.c16 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  font-weight: 700;
  color: rgba(210,55,29,1);
}

.c13 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  max-width: none;
  color: #2F3850;
  background-color: rgba(233,241,251,1);
}

.c13:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c13:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      aria-describedby="modal-description"
      aria-labelledby="modal-title"
      class="c1 c2"
      overflow="auto"
      role="dialog"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5"
            id="modal-title"
          >
            Invite researcher
          </h1>
          <button
            class="c6"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
            title="Close window"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
            <p
              class="c7 c8"
            >
              Close window
            </p>
          </button>
        </div>
      </div>
      <div
        class="c9"
        id="modal-description"
      >
        <div
          class="c3"
        >
          <h3
            class="c10"
          >
            Send another invite
          </h3>
          <div
            class="c11"
            width="100%"
          >
            <p
              class="c12"
              font-size="14"
              id="researcher-email-label"
            >
              Researcher’s e-mail address
            </p>
            <input
              aria-labelledby="researcher-email-label"
              class="c13"
              placeholder="e.g john.doe@contact.com"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <h3
            class="c10"
          >
            Invitations sent (2)
          </h3>
          <div
            class="c14"
            height="46"
          >
            <p
              class="c15"
              font-size="14"
            >
              email@gmail.com
            </p>
            <button
              class="c16"
              color="#D2371D"
              font-weight="bold"
            >
              Cancel
            </button>
          </div>
          <div
            class="c14"
            height="46"
          >
            <p
              class="c15"
              font-size="14"
            >
              email2@gmail.com
            </p>
            <button
              class="c16"
              color="#D2371D"
              font-weight="bold"
            >
              Cancel
            </button>
          </div>
          <button
            class="c17"
            color="primary"
            disabled=""
            radius="100px"
            width="260"
          >
            Send invitation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InviteResearcher /> Should render and match the snapshot 1`] = `
.c17 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 45px;
  margin-bottom: 5px;
  width: 260px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  width: 100%;
  margin-bottom: 35px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 46px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 12px;
  padding-bottom: 12px;
  height: 46px;
  border-bottom: 1px solid #D7DEE9;
}

.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 10px;
  font-size: 14px;
  color: #2F3850;
}

.c15 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  color: #2F3850;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(14,14,14,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
}

.c8 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c6 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  position: relative;
  left: 40px;
  top: -8px;
}

.c10 {
  margin: 0;
  font-family: DM Sans;
  font-size: 15px;
  line-height: 150%;
  margin-bottom: 20px;
  color: #2F3850;
}

.c16 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  font-weight: 700;
  color: rgba(210,55,29,1);
}

.c13 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  max-width: none;
  color: #2F3850;
  background-color: rgba(233,241,251,1);
}

.c13:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c13:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      aria-describedby="modal-description"
      aria-labelledby="modal-title"
      class="c1 c2"
      overflow="auto"
      role="dialog"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5"
            id="modal-title"
          >
            Invite researcher
          </h1>
          <button
            class="c6"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
            title="Close window"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
            <p
              class="c7 c8"
            >
              Close window
            </p>
          </button>
        </div>
      </div>
      <div
        class="c9"
        id="modal-description"
      >
        <div
          class="c3"
        >
          <h3
            class="c10"
          >
            Send another invite
          </h3>
          <div
            class="c11"
            width="100%"
          >
            <p
              class="c12"
              font-size="14"
              id="researcher-email-label"
            >
              Researcher’s e-mail address
            </p>
            <input
              aria-labelledby="researcher-email-label"
              class="c13"
              placeholder="e.g john.doe@contact.com"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <h3
            class="c10"
          >
            Invitations sent (2)
          </h3>
          <div
            class="c14"
            height="46"
          >
            <p
              class="c15"
              font-size="14"
            >
              email@gmail.com
            </p>
            <button
              class="c16"
              color="#D2371D"
              font-weight="bold"
            >
              Cancel
            </button>
          </div>
          <div
            class="c14"
            height="46"
          >
            <p
              class="c15"
              font-size="14"
            >
              email2@gmail.com
            </p>
            <button
              class="c16"
              color="#D2371D"
              font-weight="bold"
            >
              Cancel
            </button>
          </div>
          <button
            class="c17"
            color="primary"
            disabled=""
            radius="100px"
            width="260"
          >
            Send invitation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
